# ractip

./: .gitignore  .hgignore  CMakeLists.txt  Dockerfile  Makefile.in  README.md  README.rd  aclocal.m4  config.h.in  configure  configure.ac
.devcontainer/: Dockerfile
data/: CopA.fa  CopT.fa  DIS.fa  IncRNA54.fa  MicA.fa  OxyS.fa  R1inv.fa  R2inv.fa  RepZ.fa  RyhB.fa  SodB.fa  Tar.fa  Tarstar.fa  fhlA.fa  ompA.fa
examples/: conv.rb
src/: Makefile.am  Makefile.in  centroid_hybrid.cpp  cmdline.c  cmdline.h  cyktable.h  fa.cpp  fa.h  ip.cpp  main.cpp  part_func.c  part_func.h  pf_duplex.c  pf_duplex.h  ractip.cpp  ractip.ggo  rnaip.cpp
src/contrafold/: Config.hpp  Makefile  Makefile.in
utils/: eval.rb
