bin_PROGRAMS = rnaip centroid_hybrid

rnaip_SOURCES = \
	rnaip.cpp pf_duplex.c pf_duplex.h fa.cpp fa.h cyktable.h part_func.c part_func.h \
	contrafold/InferenceEngine.hpp contrafold/InferenceEngine.ipp \
	contrafold/DuplexEngine.hpp contrafold/DuplexEngine.ipp \
	contrafold/ParameterManager.hpp contrafold/ParameterManager.ipp \
	contrafold/SStruct.hpp contrafold/SStruct.cpp \
	contrafold/Utilities.hpp contrafold/Utilities.ipp contrafold/Utilities.cpp \
	contrafold/Defaults.ipp contrafold/LogSpace.hpp

centroid_hybrid_SOURCES = \
	centroid_hybrid.cpp pf_duplex.c pf_duplex.h fa.cpp fa.h cyktable.h
