bin_PROGRAMS = ractip

ractip_SOURCES = \
	ractip.cpp pf_duplex.c pf_duplex.h fa.cpp fa.h \
	contrafold/InferenceEngine.hpp contrafold/InferenceEngine.ipp \
	contrafold/DuplexEngine.hpp contrafold/DuplexEngine.ipp \
	contrafold/ParameterManager.hpp contrafold/ParameterManager.ipp \
	contrafold/SStruct.hpp contrafold/SStruct.cpp \
	contrafold/Utilities.hpp contrafold/Utilities.ipp contrafold/Utilities.cpp \
	contrafold/Defaults.ipp contrafold/LogSpace.hpp contrafold/Config.hpp contrafold/rand.h
