bin_PROGRAMS = ractip

ractip_SOURCES = \
	ractip.cpp ip.cpp ip.h fa.cpp fa.h \
	boltzmann_param.c boltzmann_param.h \
	cmdline.c cmdline.h pf_duplex.c pf_duplex.h \
	contrafold/InferenceEngine.hpp contrafold/InferenceEngine.ipp \
	contrafold/DuplexEngine.hpp contrafold/DuplexEngine.ipp \
	contrafold/ParameterManager.hpp contrafold/ParameterManager.ipp \
	contrafold/SStruct.hpp contrafold/SStruct.cpp \
	contrafold/Utilities.hpp contrafold/Utilities.ipp contrafold/Utilities.cpp \
	contrafold/Defaults.ipp contrafold/LogSpace.hpp contrafold/Config.hpp contrafold/rand.h 
